# ChangeLog for x11-base/xorg-x11
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.145 2004/10/11 08:33:27 spyderous Exp $

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Add three new USE flags: truetype-fonts, type1-fonts and xv. The fonts ones
  enable building of that type of font, and xv enables the XVideo library and
  extension.

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Allow FEATURES=nostrip to prevent stripping, and add ${CHOST}-strip support
  from solar (#66531).

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Add uclibc support by making build a little more minimal with USE=uclibc,
  thanks to iggy.

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Add dri and glx USE flags. dri builds direct rendering support into drivers.
  glx builds the GLX library and extension. The dri flag is a subset of the glx
  flag.

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Fix up dependency list, thanks to iggy.

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Make font server optional with xfs USE flag.

*xorg-x11-6.8.0-r2 (11 Oct 2004)

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  +xorg-x11-6.8.0-r2.ebuild:
  Add in-progress ebuild. It's broken, don't waste your time trying it yet.

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r1.ebuild:
  Remove bogus sgmltools-lite dependency.

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r1.ebuild:
  Disallow USE="dmx doc" (#63548).

  11 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r1.ebuild:
  Build libXp even when USE=-xprint, at ajax's suggestion. RH does the same.