@@ -1,8 +1,8 @@
 MD5 36a69eed0e585f3dcf096cc82ac54575 metadata.xml 230
-MD5 7933a36f4842547be08f9f526aef24b3 xorg-x11-6.8.0-r2.ebuild 43133
+MD5 957f839664352661468860c7af6b9789 xorg-x11-6.8.0-r2.ebuild 43133
 MD5 c32f9bc44ffd10b49297b4898097096b xorg-x11-6.7.0-r2.ebuild 38142
 MD5 42742dfe0e821f4d1978040a96be850c xorg-x11-6.8.0-r1.ebuild 41437
-MD5 931a55534e4cbb427d2f25e344c086ca ChangeLog 32030
+MD5 3f1ac844775de11e6f7105626ea40a0c ChangeLog 32156
 MD5 a3ef47fa1d11b9b29589eea734a6c6d2 files/digest-xorg-x11-6.8.0-r2 906
 MD5 a3314fbdc270d7d84ea14fd477b8d048 files/digest-xorg-x11-6.7.0-r2 904
 MD5 a3ef47fa1d11b9b29589eea734a6c6d2 files/digest-xorg-x11-6.8.0-r1 906
