@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/xorg-x11-6.8.0-r2.ebuild,v 1.7 2004/10/11 08:33:27 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/xorg-x11-6.8.0-r2.ebuild,v 1.8 2004/10/11 08:34:54 spyderous Exp $
 
 # Set TDFX_RISKY to "yes" to get 16-bit, 1024x768 or higher on low-memory
 # voodoo3 cards.
@@ -1031,9 +1031,6 @@ src_install() {
 	keepdir /var/lib/xdm
 	dosym ../../../var/lib/xdm /etc/X11/xdm/authdir
 
-	# We move libGLU to /usr/lib now
-	dosym libGLU.so.1.3 /usr/$(get_libdir)/libMesaGLU.so
-
 	# .la files for libtool support
 	insinto /usr/X11R6/$(get_libdir)
 	doins ${FILES_DIR}/$(get_libdir)/*.la
@@ -1074,6 +1071,9 @@ src_install() {
 	fi
 
 	etc_files_install
+
+	# We move libGLU to /usr/lib now
+	dosym libGLU.so.1.3 /usr/$(get_libdir)/libMesaGLU.so
 
 	# we want libGLU.so* in /usr/lib
 	mv ${D}/usr/X11R6/$(get_libdir)/libGLU.* ${D}/usr/$(get_libdir)
